--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,10 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+#root {
+  max-width: 930px;
+  margin: 2.5rem auto 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+.container {
+  width: 700px !important;
+  max-width: none !important;
+  font-size: 1rem !important;
 }
